--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "joi-password": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1"
   },
   "devDependencies": {
