--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "mflix",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "dev": "nodemon ./src/index.js",
-    "start": "node ./src/index.js",
-    "test": "vitest"
-  },
+"scripts": {
+  "dev": "nodemon --require dotenv/config ./src/index.js",
+  "start": "node --require dotenv/config ./src/index.js",
+  "test": "vitest"
+},
   "type": "module",
   "keywords": [],
   "author": "",
